--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#962d00</color>
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#e2e0e0</color>
+    <color name="dark_grey">#383737</color>
 </resources>
